Fix for plugins stop working on Mac bug 90959 r=av sr=attinasi